Fix screen to stretch

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,8 +29,11 @@ ul{
 body {
   font-size: 62.5%;
   height: 100%;
-  background: url(./assets/background.jpg);
-  background-repeat: no-repeat;
+  background: url(./assets/background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-attachment: fixed;
   font-family: "Open Sans", sans-serif;
   color:#f9fbff;
